# sgp30-exporter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml  rust_release.yml
src/: main.rs
