[package]
name = "sgp30-exporter"
version = "0.1.8"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[dependencies]
compile-time = "0.2.0"
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs.git", tag = "v0.2.5" }
prometheus_exporter = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
sgp30 = "1.0.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
